--- a/config.yaml
+++ b/config.yaml
@@ -10,4 +10,4 @@ user_sub: "1548"
 # [pt_BR] Opção para salvar os logs em arquivo (logs.txt)
 # Valor padrão : False
 # Opções disponíveis: False ou True
-save_log_to_file: True
+save_log_to_file: true
