add auto leveling

--- a/config.yaml
+++ b/config.yaml
@@ -1,14 +1,14 @@
 channel: 1
-countdown: {hours: 0, minutes: 30, seconds: 0}
+countdown: { hours: 0, minutes: 30, seconds: 0 }
 save_log_to_file: true
-user_sub: '1548'
+user_sub: "1548"
 warps:
-- [450, 145]
-- [308, 191]
-- [288, 282]
-- [372, 301]
-- [391, 244]
-- [485, 331]
-- [495, 292]
-- [505, 432]
-- [434, 424]
+  - [450, 145]
+  - [308, 191]
+  - [288, 282]
+  - [372, 301]
+  - [391, 244]
+  - [485, 331]
+  - [495, 292]
+  - [505, 432]
+  - [434, 424]
